<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:screenOrientation="portrait"
    android:paddingBottom="72dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="100dp"
    android:id="@+id/new_measure_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.tachypnoe.vibrationsense.NewMeasure"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/new_measure_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_measure_text"
        android:textSize="18sp"
         />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.14"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/new_id"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/new_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/new_id"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.14"
        android:weightSum="1">
    <TextView
        android:id="@+id/textDisease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.39"
        android:textSize="14sp"
        android:text="@string/disease"
         />

    <EditText
        android:id="@+id/disease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="8dp"
        android:hint="@string/disease"
        android:inputType="textPersonName"
        android:layout_weight="0.6"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.14"
        android:weightSum="1">

        <TextView
            android:id="@+id/textAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:textSize="14sp"
            android:text="@string/age"
            />

        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0.6"
            android:ems="10"
            android:layout_marginLeft="8dp"
            android:gravity="top"
            android:hint="@string/age"
            android:inputType="number"
            android:text="@string/Blank"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.14">

        <TextView
            android:id="@+id/textGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.27"
            android:textSize="14sp"
            android:text="@string/gender"
         />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_weight="0.6"/>


    </LinearLayout>


    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.14"
    android:weightSum="1">

    <TextView
        android:id="@+id/textMisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.49"
        android:textSize="14sp"
        android:text="@string/miscData"/>

    <EditText
        android:id="@+id/miscData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_weight="0.6"
        android:ems="10"
        android:hint="@string/miscData"
        android:inputType="textPersonName" />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center_vertical|center"
        android:orientation="horizontal">
    <Button
        android:id="@+id/activity_new_measure"
        android:layout_width="204dp"
        android:layout_height="56dp"
        android:background="@drawable/next_btn"
        android:fontFamily="casual"
        android:onClick="onExactMeasureClick"
        android:paddingTop="5dp"
        android:text="@string/toExactMeasure"
        android:textAllCaps="false"
        android:visibility="visible" />
    </LinearLayout>

</LinearLayout>
