<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.tachypnoe.vibrationsense.Vibrating">

    <TextView
        android:id="@+id/countdown"
        android:layout_width="331dp"
        android:layout_height="140dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/vibrateExplain"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        app:layout_constraintHorizontal_bias="0.526" />

    <Button
        android:id="@+id/start"
        android:layout_width="199dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/start_btn"
        android:fontFamily="casual"
        android:gravity="center_vertical|center"
        android:onClick="onStartClick"
        android:paddingLeft="15dp"
        android:text="@string/Start"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown"
        app:layout_constraintVertical_bias="0.082" />

    <ProgressBar
        android:id="@+id/BeautifulBar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Large"
        android:layout_width="233dp"
        android:layout_height="236dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:indeterminateOnly="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/toEvaluation"
        android:layout_width="199dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/next_btn"
        android:fontFamily="casual"
        android:gravity="center_vertical|center"
        android:onClick="toEvaluation"
        android:paddingLeft="15dp"
        android:text="@string/toExactMeasure"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        tools:layout_editor_absoluteY="373dp" />


</android.support.constraint.ConstraintLayout>
